--- a/V1-2.html
+++ b/V1-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Informacijski sistem: učenci & učitelji</title>
+  <title>SIS</title>
   <style>
     :root{--bg:#f6f9fb;--card:#fff;--accent:#0b78d1;--muted:#566;--danger:#d1392a}
     html,body{height:100%;margin:0;font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:#222}
@@ -36,8 +36,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Informacijski sistem za komunikacijo učencev z učitelji</h1>
-      <div class="small">Podatki se shranijo lokalno (localStorage)</div>
+      <h1>SIS</h1>
+      <div class="small">V 1.2</div>
     </header>
 
     <main class="card grid">
